# zdcf

./: LICENSE  README.md
examples/data/sim/: cenozoic_autocorrelation.txt
tests/: test_basic.py
zdcf/: README.md  meson.build  pyproject.toml
zdcf/examples/: run_zdcf.py
zdcf/examples/data/data_raw/: d13c.txt
zdcf/src/zdcf/: __init__.py  api.py
zdcf/src/zdcf/_fortran/: zdcf.f  zdcf.pyf
